human_written_tests/WebAssembly/processed_control_flow_validation/test_br_if_27.wast
(assert_invalid
  (module (func $unbound-label (br_if 1 (i32.const 1))))
  "unknown label"
)